--- a/recycleviewexample/src/main/res/layout/activity_plant_book.xml
+++ b/recycleviewexample/src/main/res/layout/activity_plant_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D6D6D6"
-    tools:context=".controller.MainActivity">
+    tools:context=".controller.PlantBookActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
