--- a/notebookexample/src/main/res/values/colors.xml
+++ b/notebookexample/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#29C2F1</color>
     <color name="dark_grey">#5E5E5E</color>
+    <color name="blue_dark">#021A4B</color>
 </resources>
