Add RecycleView for showing message and user name

--- a/firebasechat/src/main/res/layout/activity_main.xml
+++ b/firebasechat/src/main/res/layout/activity_main.xml
@@ -4,18 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/rcView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/start_chat"
-        app:layout_constraintBottom_toTopOf="@+id/edMessage"
-        app:layout_constraintEnd_toEndOf="@+id/edMessage"
-        app:layout_constraintStart_toStartOf="@+id/edMessage"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".controller.MainActivity">
 
     <Button
         android:id="@+id/btSend"
@@ -42,5 +31,14 @@
         app:layout_constraintBottom_toTopOf="@+id/btSend"
         app:layout_constraintEnd_toEndOf="@+id/btSend"
         app:layout_constraintStart_toStartOf="@+id/btSend" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/edMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
